# dtk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/dtk/: __init__.py  _backend.py  _constants.py  _duckdb_backend.py  _field_registry.py  _types.py  cdh.py  cdp.py  cds.py  cdu.py  convert.py  date_utils.py  errors.py  security.py  store.py
src/dtk/sql/: init.sql
tests/: conftest.py  test_cdh.py  test_cdp.py  test_cds.py  test_cdu.py  test_convert.py  test_date_utils.py  test_duckdb_backend.py  test_errors.py  test_field_registry.py  test_security.py  test_store.py
