[project]
name = "dtk"
version = "0.1.0"
description = "Data Toolkit: DuckDB-backed data access layer for financial data"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "polars>=1.0",
    "exchange-calendars>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dtk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff.lint]
select = ["E", "F", "I"]
